fixing mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,6 @@ h3 {
 }
 
 .accommodation-and-popular section {
-    background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
     box-sizing: border-box;
@@ -272,6 +271,7 @@ h3 {
 /****** Accommodation ***********/
 .accommodation {
     width: 65%;
+    background-color: var(--main-bg-color);
 }
 
 .accommodation-cards {
@@ -334,6 +334,7 @@ h3 {
 /****** Popular ***********/
 .popular {
     width: 32%;
+    background-color: var(--main-bg-color);
 }
 
 .popular-title {
@@ -421,7 +422,6 @@ h3 {
 
 footer {
     width: 100%;
-    max-width: 1440;
     background-color: var(--main-bg-color);
 }
 
@@ -492,7 +492,7 @@ footer {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        gap: 30px;
+        gap: 15px;
     }
 
     .things-to-do-cards .card {
@@ -510,7 +510,15 @@ footer {
 }
 
 /*********** Mobile ************/
+.main-container {
+    padding: 0;
+}
+
 @media (max-width:768px) {
+    header {
+        padding: 0 20px;
+    }
+    
     .navbar {
         position: relative;
         display: flex;
@@ -518,7 +526,7 @@ footer {
         flex-direction: column;
         align-items: center;
         width: 100%;
-        padding: 20px 0;
+        padding: 0px 0;
     }
 
     .logo{
@@ -610,34 +618,43 @@ footer {
     }
 
     .filter-container {
+        display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 20px 10px;
     }
 
     .filter-chip {
+        flex: 1 1 calc(50% - 10px);
+        max-width: calc(50% - 10px);
         height: 50px;
         text-align: center;
+        padding: 14px 7px 14px 19px;
     }
 
     .filter-title {
         flex-basis:100%;
+        margin: 0px;
     }
 
     .accommodation-and-popular section {
-        background-color: transparent;
         border-radius: 0;
-        padding: 30px;
+        padding: 30px 20px;
         box-sizing: border-box;
+    }
+
+    .accommodation-and-popular {
+        gap: 5px;
     }
 
     .popular {
         order: -1;
-    }
-    .popular section {
-        width: 100%;
-        background-color: grey;
-        padding: 30px;
-        box-sizing: border-box;
+        padding: 0px;
+        position: relative;
+        width: 100vw;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 0 0 0 30px;
+        background-color: var(--main-bg-color);;
     }
 
     .popular-cards {
@@ -659,26 +676,45 @@ footer {
     
 
     .accommodation {
-        background-color: white;
+        background-color: transparent;
+        padding: 30px 0;
     }
-    
+
     .things-to-do-cards .card {
         width: 100%;
         margin: 0;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
-        padding: 0px;
+    }
+
+    .things-to-do-cards img {
+        height: 141px;
+        width: 100%;
+    }
+    .accommodation-cards {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        gap: 15px;
     }
 
     .accommodation-cards .card {
         width: 100%;
-        max-width: 335px;
         margin: 0;
+        min-height: 207px;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
     }
+
+    footer {
+        position: relative;
+        width: 100vw;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 0 0 0 30px;
+    }
+
     .footer-container {
         display: flex;
         flex-direction: column;
